--- a/frontend/src/component/adminpage/adminpage.css
+++ b/frontend/src/component/adminpage/adminpage.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     transition: all 300ms ease;
+    font-size: 24;
 }
 
 .body{ 
@@ -12,6 +13,10 @@
     text-align: center;
 }
 
+body input{
+  font-size: 18px;
+}
+
 .admin-search-fill{
     text-align:  left;
     color: white;
@@ -20,13 +25,11 @@
 }
 
 .body .admin-search-fill h1{
-    font-size: 36px;
+    font-size: 24px;
     margin-bottom: 30px;
 }
 
-.body .admin-search-fill input{
-    width: 15vw;
-}
+
 
 .input-container {
   display: flex;
@@ -47,15 +50,16 @@
 .input-container input {
   width: 150px; /* กำหนดความกว้างของ input */
   padding: 5px;
+  margin-top: 0px;
 }
 
 .body .admin-search-fill button{
-    border-radius: 20px;
+    border-radius: 15px;
     border: none;
-    background-color: rgb(0, 255, 0);
+    background-color: #7DC653;
     font-weight: bold;
-    padding: 8px 30px 8px 30px;
-    color: black; 
+    padding: 8px 10px 8px 10px;
+    color: white; 
     margin-top: 30px;
     cursor: pointer;
     transition: all 300ms ease;
@@ -64,25 +68,48 @@
 }
 
 .body .admin-search-fill button:hover{
-    background-color: rgb(0, 131, 0);
+    background-color: #5a8b3d;
     color: white;
 }
 
 .body .admin-displayzone{
     margin: 20px;
+    font-size: 24px;
+}
+
+table td{
+  font-size: 18px;
+}
+
+table th{
+  font-size: 18px;
 }
 
 table button{
-    background-color: rgb(255, 0, 0);
+    
     color: white;
     border: none;
     border-radius: 30px;
-    padding: 1px 30px 1px 30px;
+    padding: 3px 15px 3px 15px;
     cursor: pointer;
     font-weight: bold;
+    font-size: 18px;
 }
 
-table button:hover{
+.delete_button{
+  background-color: rgb(255, 71, 71);
+}
+
+.edit_button{
+  background-color: rgb(93, 93, 255);
+  margin-left: 20px;
+}
+
+.edit_button:hover{
+  background-color: rgb(0, 0, 155);
+}
+
+.delete_button:hover{
     background-color: rgb(143, 0, 0);
 }
 
