--- a/frontend/src/component/mainpage/mainpage.css
+++ b/frontend/src/component/mainpage/mainpage.css
@@ -63,6 +63,7 @@ table {
   margin-top: 20px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  font-size: 24px;
 }
 
 thead {
