--- a/frontend/src/component/adminpage_maintenance/adminpage_maintenance.css
+++ b/frontend/src/component/adminpage_maintenance/adminpage_maintenance.css
@@ -21,7 +21,8 @@ body input{
     text-align:  left;
     color: white;
     background-color: #1B9996;
-    padding: 50px;
+    padding: 30px 50px 30px 50px;
+    
 }
 
 .body .admin-search-fill h1{
@@ -62,7 +63,7 @@ body input{
 
 .input-container input {
   width: 150px; /* กำหนดความกว้างของ input */
-  padding: 5px;
+  padding: 2px 5px 2px 5px;
   margin-top: 0px;
 }
 
@@ -76,7 +77,7 @@ body input{
     margin-top: 30px;
     cursor: pointer;
     transition: all 300ms ease;
-    font-size: 24px;
+    font-size: 22px;
 
 }
 
@@ -88,6 +89,32 @@ body input{
 .body .admin-displayzone{
     margin: 20px;
     font-size: 24px;
+}
+
+.admin-displayzone input{
+  border: 0.1px solid gray;
+  width: 20%;
+  display: flex;
+  margin: 0;
+  border-radius: 10px;
+}
+
+.admin-container .search-button{
+  color: gray;
+}
+
+.admin-container .search-button:hover{
+  color: #6bb2ff;
+}
+
+.admin-container{
+  display: flex;
+}
+
+.admin-displayzone .admin-container h1{
+  text-align: center;
+  font-size: 28px;
+  margin-left: 18vw;
 }
 
 table td{
