[17] font table 16 to 14

--- a/frontend/src/component/maintenancepage/maintencncepage.css
+++ b/frontend/src/component/maintenancepage/maintencncepage.css
@@ -6,14 +6,13 @@
 .body{
   color: black;
   text-align: center;
-  
+  width: 100%;
 }
 
 .search-fill{
   color: white;
   background-color: #1B9996;
   padding: 30px;
-
 
 }
 
