--- a/frontend/src/component/maintenancepage/maintencncepage.css
+++ b/frontend/src/component/maintenancepage/maintencncepage.css
@@ -5,7 +5,6 @@
 
 .body{
   color: black;
-  text-align: center;
   width: 100%;
 }
 
@@ -13,7 +12,8 @@
   color: white;
   background-color: #1B9996;
   padding: 30px;
-
+  text-align: center;
+  
 }
 
 .body h1{
@@ -24,19 +24,31 @@
 .body .search-fill h1{
   font-size: 36px;
   margin-top: -10px;
+  margin-bottom: 30px;
 }
 
-.body input{
+.search-and-export {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  flex-wrap: wrap; /* กันกรณีหน้าจอเล็ก */
+  margin-top: 20px;
+  transition: all 300ms ease;
+}
+
+.search-and-export input{
+  margin-top: 0px;
   border-radius: 10px;
   border: none;
   width: 50vw;
   height: 4vh;
   background-color: white;
   outline: none;
-  margin-top: 20px;
+
 }
 
-.search-button {
+.search-and-export .search-button {
   background: none;
   border: none;
   cursor: pointer;
@@ -66,7 +78,6 @@
 .exportpdf{
   font-size: 18px;
   text-align: right;
-  margin-top: -40px;
   font-weight: bold;
 }
 
@@ -91,14 +102,15 @@
   background-color: #555555;
 }
 
-.body .exportpdf input{
+.search-and-export .exportpdf input{
   border: none;
   border-radius: 5px;
-  width: 6%;
+  width: 23%;
   margin-right: 5px;
-  margin-left: 2px;
-  height: 0%;
+  margin-left: 4px;
+  height: 25px;
   font-size: 18px;
+
 }
 
 table {
