[24]Done back-end buyorder, billbuyorder

--- a/frontend/src/component/store/buyorderpage/buyorderpage.css
+++ b/frontend/src/component/store/buyorderpage/buyorderpage.css
@@ -13,6 +13,11 @@
     padding: 15px;
 }
 
+.body-buyorder input{
+    border: 0.1px solid gray;
+    border-radius: 5px;
+}
+
 .delete_button-buyorder{
     color: white;
     background-color: red;
